# lvgl_ui_sample

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h  lv_demo.code-workspace
docs/: MVP.md
mvp/: CMakeLists.txt
mvp/interfaces/: i_base_mvp.cpp  i_base_mvp.h  i_mvp_base.cpp
src/: main.cpp  main.h
src/mvp/: CMakeLists.txt
src/mvp/actions/ecg/: ecg_events.cpp  ecg_events.h
src/mvp/interfaces/: base_pub_sub.cpp  base_pub_sub.h  base_pub_sub.hpp  i_base_mvp.cpp  i_base_mvp.h
src/mvp/interfaces/base_presenter/: i_base_presenter.cpp
src/mvp/interfaces/base_view/: i_base_view.cpp  i_base_view.h
src/mvp/interfaces/publisher/: base_publisher.cpp  base_publisher.hpp
src/mvp/interfaces/subscriber/: base_subscriber.cpp  base_subscriber.hpp
src/mvp/models/demo_model/: demo_model.cpp  demo_model.h
src/mvp/models/ecg_model/: ecg_model.cpp  ecg_model.h
src/mvp/presenters/ecg_presenter/: ecg_presenter.cpp  ecg_presenter.h
src/mvp/presenters/main_presenter/: main_presenter.cpp  main_presenter.h
src/mvp/views/ecg_view/: ecg_view.cpp  ecg_view.h
src/mvp/views/main_view/: main_view.cpp  main_view.h
src/ui/: CMakeLists.txt
src/ui/actions/ecg/: ecg_events.cpp
src/ui/models/: main_model.cpp  main_model.h  main_model.hpp
src/ui/models/ecg_model/: ecg_model.h
src/ui/models/main_tab/: main_tab_model.cpp  main_tab_model.h
src/ui/presenter/: main_presenter.cpp  main_presenter.h
src/ui/presenters/: main_presenter.cpp  main_presenter.h  main_presenter.hpp  main_presenter_notifications.h  main_presenter_notifications.hpp
src/ui/presenters/main_tab/: main_tab_presenter.cpp  main_tab_presenter.h
src/ui/views/ecg_view/: ecg_view.cpp  ecg_view.h
src/ui/views/main_tab/: main_tab_view.cpp  main_tab_view.h  main_tab_view.hpp
src/ui/views/menu_view/: menu_view.cpp  menu_view.h
src/ui/views/oxygen_view/: oxygen_view.cpp  oxygen_view.h
ui/actions/ecg/: ecg_events.h
ui/models/ecg_model/: ecg_model.cpp
ui/presenters/ecg_presenter/: ecg_presenter.cpp  ecg_presenter.h
ui/presenters/main_tab/: main_tab_presenter.h
ui/views/ecg_view/: ecg_view.cpp  ecg_view.h
ui/views/main_tab/: main_tab.cpp  main_tab.h  main_tab_view.cpp  main_tab_view.h
